# Demos

injection-arena/: README.md  pyproject.toml
injection-arena/app/: __init__.py  agents_setup.py  arena.py  canned.py  config.py  context.py  gate.py  mock_tools.py  scenarios.py  server.py
injection-arena/static/: app.js  index.html  styles.css
