[project]
name = "injection-arena"
version = "0.1.0"
description = "Agent Injection Arena - adversarial theater with a behavioral gate punchline (Maida)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openai-agents>=0.0.10",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
